tests/ui/error-codes/E0001.stderr
error: unreachable pattern
  --> $DIR/E0001.rs:8:9
   |
LL |         _ => {/* ... */}
   |         ^ no value can reach this
   |
note: multiple earlier patterns match some of the same values
  --> $DIR/E0001.rs:8:9
   |
LL |         Some(_) => {/* ... */}
   |         ------- matches some of the same values
LL |         None => {/* ... */}
   |         ---- matches some of the same values
LL |         _ => {/* ... */}
   |         ^ collectively making this unreachable
note: the lint level is defined here
  --> $DIR/E0001.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

